--- a/src/main/webapp/loginpage.xhtml
+++ b/src/main/webapp/loginpage.xhtml
@@ -26,13 +26,13 @@ xmlns:ui="http://java.sun.com/jsf/facelets"
 		<h:message id="messages" for="password"></h:message>
 		<br></br><br></br>
 		
-		<h:commandButton action="#{login.validateUsernamePassword}"
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h:commandButton action="#{login.validateUsernamePassword}"
 			value="Login"></h:commandButton>
 			
 				<h:commandButton action="searchweb"
 			value="Home"></h:commandButton>
 			<br></br><br></br>
-		Don't you have account?<h:commandButton action="register"	value="Register"></h:commandButton>
+		Don't you have account?&nbsp;&nbsp;<h:commandButton action="register"	value="Register"></h:commandButton>
 			<p:messages showDetail="true"/>
 	</div></h:form>
 </h:body>
